[package]
name = "layer-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
sha2 = "0.10"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
colored = "2.0"
